@@ -5,7 +5,7 @@ except ImportError:
     use_setuptools()
     from setuptools import setup, find_packages
 
-version = '1.0b4'
+version = '1.0b5'
 
 setup(
     name="WebHelpers",
